--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
          <p></p>
          <button class="btn evaluate" id="button"onclick="Evaluate()">Calculate!</button>
          <h2 id="result"></h2>
-         <div class="reset" id="url"><a href="file:///C:/Users/vapum/Desktop/static/index.html">Reset</a></div>
+         <div class="reset" id="url"><a href="http://51.15.219.239/">Reset</a></div>
       </div>
       <script type="text/javascript" src="./calc.js"></script>
    </body>
